deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-lookup-server
  namespace: dns-lookup
  annotations:
    kube-score/ignore: pod-probes, container-ephemeral-storage-request-and-limit
  labels:
    app.kubernetes.io/name: dns-lookup-server
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: dns-lookup
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dns-lookup-server
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: dns-lookup
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dns-lookup-server
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: dns-lookup
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/glebiller/dns-lookup-server
          imagePullPolicy: Always
          name: dns-lookup-server
          args: [
            "--port", "3000",
            "--influxdb-url", "http://localhost:8086/",
            "--influxdb-org", "dns-lookup",
          ]
          ports:
            - name: rest
              containerPort: 3000
          livenessProbe:
            httpGet:
              port: rest
              path: /health
          resources:
            requests:
              cpu: 100m
              memory: 16Mi
            limits:
              cpu: 1000m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 20000
            runAsGroup: 20000
            seccompProfile:
              type: RuntimeDefault
      dnsPolicy: ClusterFirst
      restartPolicy: Always
